fix(ui): non alignment of backgound image and text colour
- change background picture
- remove logo
- modify the Epic Mail color

[Delivers 164566282]

--- a/UI/css/general.css
+++ b/UI/css/general.css
@@ -67,12 +67,6 @@ li > a {
   text-decoration: none;
 }
 
-img.logo {
-  border: 2px solid white;
-  width: 100px;
-  height: auto;
-  border-radius: unset;
-}
 
 img.logo-small {
   border: 2px solid white;
